<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_sessions"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_sessions" />
    <item
        android:id="@+id/nav_projects"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_projects" />
    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_tasks" />
    <item
        android:id="@+id/nav_permissions"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_permissions" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
