<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_xl"
    android:background="@color/md3_surface">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_session_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/space_xl" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/projectInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_session_project_hint"
        android:layout_marginBottom="@dimen/space_lg">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/projectSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sessionNameLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_session_name_hint"
        android:layout_marginBottom="@dimen/space_lg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sessionNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_session_task_hint"
        android:layout_marginBottom="@dimen/space_xl">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/taskSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target_min"
            android:layout_marginEnd="@dimen/space_md"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target_min"
            android:text="@string/start_session_confirm" />

    </LinearLayout>

</LinearLayout>
