<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface"
    android:orientation="vertical"
    android:paddingLeft="@dimen/space_lg"
    android:paddingTop="@dimen/space_md"
    android:paddingRight="@dimen/space_lg"
    android:paddingBottom="@dimen/space_lg">

    <TextView
        style="@style/TextAppearance.OpenClaw.SectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attachment_options" />

    <TextView
        style="@style/TextAppearance.OpenClaw.SectionBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:layout_marginBottom="@dimen/space_md"
        android:text="@string/attachment_sheet_subtitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/galleryOptionButton"
            style="@style/Widget.OpenClaw.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="1"
            android:text="@string/attachment_gallery"
            app:icon="@android:drawable/ic_menu_gallery"
            app:iconGravity="textStart"
            app:iconPadding="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/documentOptionButton"
            style="@style/Widget.OpenClaw.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_sm"
            android:layout_weight="1"
            android:text="@string/attachment_documents"
            app:icon="@drawable/ic_attach_file"
            app:iconGravity="textStart"
            app:iconPadding="10dp" />
    </LinearLayout>
</LinearLayout>
